crates/bevy_reflect_compile_fail_tests/tests/reflect_derive/lifetimes.fail.stderr
error[E0478]: lifetime bound not satisfied
 --> tests/reflect_derive/lifetimes.fail.rs:3:10
  |
3 | #[derive(Reflect)]
  |          ^^^^^^^
  |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
 --> tests/reflect_derive/lifetimes.fail.rs:4:12
  |
4 | struct Foo<'a> {
  |            ^^
  = note: but lifetime parameter must outlive the static lifetime
  = note: this error originates in the derive macro `Reflect` (in Nightly builds, run with -Z macro-backtrace for more info)
