crates/bevy_reflect_compile_fail_tests/tests/reflect_derive/lifetimes.fail.rs
use bevy_reflect::Reflect;

#[derive(Reflect)]
struct Foo<'a> {
    #[reflect(ignore)]
    value: &'a str,
}

fn main() {}
